1.升级spring 版本为4.2.0；2.修改admin 后台服务重复注册bug；3. 优化提供者，服务列表页面显示项；4.demo修改

--- a/dubbo-admin/src/main/webapp/WEB-INF/templates/governance/screen/consumers/index.vm
+++ b/dubbo-admin/src/main/webapp/WEB-INF/templates/governance/screen/consumers/index.vm
@@ -39,7 +39,7 @@
 <tr>
 	<td><input type="checkbox" name="ids" value="$consumer.id" /></td>
 	<td><a href="consumers/$consumer.id">#if($address)$tool.getSimpleName($consumer.service)#else$consumer.address#end</a></td>
-    <td>$consumer.application</td>
+    <td>$!consumer.application</td>
 	<td>
         #if($tool.isInBlackList($consumer))
 			<font color="red">$i18n.get("Forbidden")</font>
