--- a/dubbo-admin/src/main/webapp/WEB-INF/templates/governance/screen/providers/index.vm
+++ b/dubbo-admin/src/main/webapp/WEB-INF/templates/governance/screen/providers/index.vm
@@ -18,32 +18,31 @@
 <tr>
 	<th width="20"><input type="checkbox" onclick="checkAll('table_o', 'ids', this.checked)" /></th>
 	<th>#if($address)$i18n.get("service")#else$i18n.get("address")#end: <input type="text" style="width: 60px;" onkeyup="searchTable('table_o', 1, this.value);" onclick="searchTable('table_o', 1, this.value);" />&nbsp;<img src="$rootContextPath.getURI("images/ico_search.png")" width="12" height="12" /></th>
-	<th>$i18n.get("weight"): <input type="text" style="width: 60px;" onkeyup="searchTable('table_o', 2, this.value);" onclick="searchTable('table_o', 2, this.value);" />&nbsp;<img src="$rootContextPath.getURI("images/ico_search.png")" width="12" height="12" /></th>
-	<th width="100">$i18n.get("type"): <select onchange="searchTable('table_o', 3, this.value);" onclick="searchTable('table_o', 3, this.value);"><option value="">$i18n.get("all")</option><option value="$i18n.get("dynamic")">$i18n.get("dynamic")</option><option value="$i18n.get("static")">$i18n.get("static")</option></select></th>
-	<th width="110">$i18n.get("status"): <select onchange="searchTable('table_o', 4, this.value);" onclick="searchTable('table_o', 4, this.value);"><option value="">$i18n.get("all")</option><option value="$i18n.get("enabled")">$i18n.get("enabled")</option><option value="$i18n.get("disabled")">$i18n.get("disabled")</option></select></th>
-	<th width="100">$i18n.get("check"): <select onchange="searchTable('table_o', 5, this.value);" onclick="searchTable('table_o', 5, this.value);"><option value="">$i18n.get("all")</option><option value="$i18n.get("ok")">$i18n.get("ok")</option><option value="$i18n.get("warn")">$i18n.get("warn")</option><option value="$i18n.get("error")">$i18n.get("error")</option></select></th>
+	<th>$i18n.get("service"): <input type="text" style="width: 250px;" onkeyup="searchTable('table_o', 2, this.value);" onclick="searchTable('table_o', 2, this.value);" />&nbsp;<img src="$rootContextPath.getURI("images/ico_search.png")" width="12" height="12" /></th>
+	<th>$i18n.get("weight"): <input type="text" style="width: 60px;" onkeyup="searchTable('table_o', 2, this.value);" onclick="searchTable('table_o', 3, this.value);" />&nbsp;<img src="$rootContextPath.getURI("images/ico_search.png")" width="12" height="12" /></th>
+	<th width="100">$i18n.get("type"): <select onchange="searchTable('table_o', 3, this.value);" onclick="searchTable('table_o', 4, this.value);"><option value="">$i18n.get("all")</option><option value="$i18n.get("dynamic")">$i18n.get("dynamic")</option><option value="$i18n.get("static")">$i18n.get("static")</option></select></th>
+	<th width="110">$i18n.get("status"): <select onchange="searchTable('table_o', 4, this.value);" onclick="searchTable('table_o', 5, this.value);"><option value="">$i18n.get("all")</option><option value="$i18n.get("enabled")">$i18n.get("enabled")</option><option value="$i18n.get("disabled")">$i18n.get("disabled")</option></select></th>
+	<th width="100">$i18n.get("check"): <select onchange="searchTable('table_o', 5, this.value);" onclick="searchTable('table_o', 6, this.value);"><option value="">$i18n.get("all")</option><option value="$i18n.get("ok")">$i18n.get("ok")</option><option value="$i18n.get("warn")">$i18n.get("warn")</option><option value="$i18n.get("error")">$i18n.get("error")</option></select></th>
 	#if($currentUser.role != "G")<th>$i18n.get("operation")</th>#end
 </tr>
-#set($providerApplication = "")
+
 #foreach($provider in $providers)
 <tr>
 	<td><input type="checkbox" name="ids" value="$provider.id" /></td>
 	<td><a href="providers/$provider.id">#if($address)$tool.getSimpleName($provider.service)#else$provider.address#end</a></td>
+	<td>$provider.service</td>
 	<td>$tool.getProviderWeight($provider)</td>
 	<td>#if($provider.dynamic)<font color="green">$i18n.get("dynamic")</font>#else<font color="blue">$i18n.get("static")</font>#end</td>
 	<td>#if($tool.isProviderEnabled($provider))<font color="green">$i18n.get("enabled")</font>#else<font color="red">$i18n.get("disabled")</font>#end</td>
-	<td>
+	<td iddd="$provider.applications">
 		#set($errorLevel = "ok")
 		#set($errorMessage = "")
-		
-		#if ($providerApplication == "")
-			#set($providerApplication = $provider.application)
+
+		#set($appArr=$provider.applications.split(','))
+		#if($appArr.size()>1)
+			#if ($errorLevel != "error") #set($errorLevel = "warn") #end
+			#set($errorMessage = "$errorMessage<br>$i18n.get('warn'): $i18n.get('CheckProviderApplicationDifferent',$provider.applications)")
 		#end
-		
-        #if($providerApplication != $provider.application)
-        	#if ($errorLevel != "error") #set($errorLevel = "warn") #end
-        	#set($errorMessage = "$errorMessage<br>$i18n.get('warn'): $i18n.get('CheckProviderApplicationDifferent', $providerApplication, $provider.application)")
-        #end
         
         #if($provider.address.startsWith("127.") || $provider.address.startsWith("localhost:") || $provider.address.startsWith("0.0.0.0:"))
         	#if ($errorLevel != "error") #set($errorLevel = "warn") #end
@@ -52,7 +51,7 @@
         
     	#if ($errorLevel == "warn")
     		<a href="#" onclick="showAlert('<font color=orange>$i18n.get("warn")</font>', '$errorMessage'); return false;">
-        		<img src="$rootContextPath.getURI("images/ico_warn.png")" width="12" height="12" />
+        		<img src="$rootContextPath.getURI("images/ico_warn.png")" width="12" height="12" m1="$providerApplication" m2="$provider.application"/>
         		<font color="orange"><u>$i18n.get("warn")</u></font>
     		</a>
     	#elseif ($errorLevel == "error")
